--- a/workflows/nipype_full.html
+++ b/workflows/nipype_full.html
@@ -275,7 +275,7 @@
       
         <div class="header-article-item">
 
-<div class="article-header-buttons"><a href="https://doi.org/10.5072/zenodo.259469" target="_blank" rel="noopener noreferrer" class="btn btn-sm nav-link pst-navbar-icon theme-switch-button">https://doi.org/10.5072/zenodo.259469</a>
+<div class="article-header-buttons"><a href="https://doi.org/10.5072/zenodo.263822" target="_blank" rel="noopener noreferrer" class="btn btn-sm nav-link pst-navbar-icon theme-switch-button">https://doi.org/10.5072/zenodo.263822</a><a href="https://doi.org/10.5072/zenodo.259469" target="_blank" rel="noopener noreferrer" class="btn btn-sm nav-link pst-navbar-icon theme-switch-button">https://doi.org/10.5072/zenodo.259469</a>
 
 
 
