--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="Refresh" content="0; url=nipype_short.html" />
+<meta http-equiv="Refresh" content="0; url=bids_conversion.html" />
