--- a/structural_imaging/brain_extraction_different_tools.html
+++ b/structural_imaging/brain_extraction_different_tools.html
@@ -75,7 +75,7 @@
     <script>DOCUMENTATION_OPTIONS.pagename = 'structural_imaging/brain_extraction_different_tools';</script>
     <script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3.3.3/dist/umd/index.js"></script>
     <script src="../_static/algolia.js?v=b553005c"></script>
-    <link rel="canonical" href="https://neurodesk.github.io/example-notebooks/intro.html/structural_imaging/brain_extraction_different_tools.html" />
+    <link rel="canonical" href="https://neurodesk.github.io/example-notebooks/structural_imaging/brain_extraction_different_tools.html" />
     <link rel="icon" href="../_static/neurodesk_logo.svg"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
