--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="Refresh" content="0; url=FSL_course_bet.html" />
+<meta http-equiv="Refresh" content="0; url=bids_conversion.html" />
