deploy: 7ae61caf0e6d35b02e507478012bdfd5aef1c4b3

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="Refresh" content="0; url=intro.html" />
+
+<meta http-equiv="Refresh" content="0; url=freesurfer_recon_all_clinical.html" />
